# GlassyRenderGUI

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  GLWidget.h  GlassyEngine.h  MainWindow.h  Util.h
include/ObjectManagers/: LightManager.h  ObjectManager.h  TextureManager.h
include/Objects/: Light.h  Sphere.h  Texture.h
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: Camera.cpp  GLWidget.cpp  GlassyEngine.cpp  MainWindow.cpp
src/ObjectManagers/: LightManager.cpp  ObjectManager.cpp  TextureManager.cpp
