CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(GlassyRenderGUI VERSION 1.0 LANGUAGES CXX)

OPTION(INSTALL_LOCAL "Instal into build folder?" ON)

SET(CMAKE_CXX_STANDARD 17)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_AUTOUIC ON)

SET(CMAKE_PREFIX_PATH "C:/Qt/Qt5.14.1")

FIND_PACKAGE(Qt5 COMPONENTS Widgets Gui OpenGL OpenGLExtensions REQUIRED)

ADD_EXECUTABLE(GlassyRenderGUI main.cpp)

TARGET_INCLUDE_DIRECTORIES(GlassyRenderGUI PRIVATE include)

FILE(GLOB SOURCES src/**.cpp)
FILE(GLOB HEADERS include/**.h)
TARGET_SOURCES(GlassyRenderGUI PRIVATE ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(GlassyRenderGUI Qt5::Widgets Qt5::Gui Qt5::OpenGL Qt5::OpenGLExtensions)

IF (${INSTALL_LOCAL})
    SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/GlassyRenderGUI)
ENDIF()

FILE(GLOB DYNAMIC_LIBS lib/**.dll)
FILE(REMOVE_RECURSE ${CMAKE_INSTALL_PREFIX}/)
INSTALL(TARGETS GlassyRenderGUI CONFIGURATIONS ${CMAKE_BUILD_TYPE} RUNTIME DESTINATION /)
INSTALL(FILES ${DYNAMIC_LIBS} DESTINATION /)
INSTALL(DIRECTORY lib/platforms DESTINATION /)
INSTALL(DIRECTORY shaders DESTINATION /)
INSTALL(DIRECTORY resources DESTINATION /)